# cc-skills-svg-generator

./: .gitignore  .mcp.json  README.md  pyproject.toml  svg-generator.skill
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/svg-generator/: SKILL.md
.claude-plugin/skills/svg-generator/references/: api_reference.md
src/svg_generator_mcp/: __init__.py  server.py
svg-generator/scripts/: generate_svg.py  vectorize_svg.py
